Fix error div to be legible

--- a/Trainabl.Client/wwwroot/css/app.css
+++ b/Trainabl.Client/wwwroot/css/app.css
@@ -17,3 +17,7 @@
 }
 
 textarea { resize: vertical !important; }
+
+#blazor-error-ui {
+    background-color: #f64e62ff;
+}
